Bug 475380 - Plasma 6 Wayland session not starting on KDE Neon Unstable
Summary: Plasma 6 Wayland session not starting on KDE Neon Unstable
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-08 18:42 UTC by Lassi Väätämöinen
Modified: 2023-10-11 10:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Syslog during the Wayland startup crash (3.07 MB, text/plain)
2023-10-09 20:03 UTC, Lassi Väätämöinen
Details
Backtrace from coredumpctl (39.63 KB, text/plain)
2023-10-10 18:13 UTC, Lassi Väätämöinen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lassi Väätämöinen 2023-10-08 18:42:48 UTC
SUMMARY
 I tried VIrtualBox + Plasma Wayland on  neon-unstable-20231001-1120, after doing 

'apt udpate && apt dist-upgrade'

 the Wayland session did not even start. 

After several flickers between VirtualBox screen sizes, it went back to the SDDM login screen. Syslog showed segfaults.

STEPS TO REPRODUCE
1.  Install KDE Neon Unstable to VirtualBox, enable 3d acceleration, install Guest Additions
2. apt udpate && apt dist-upgrade
3.  apt install plasma-workspace-wayland
4. At login, select Plasma (Wayland) and log in

OBSERVED RESULT
VirtualBox window changes size several times, but stays black

EXPECTED RESULT
Wayland session starts

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon Unstable 
KDE Plasma Version: Plasma 6
Comment 1 Lassi Väätämöinen 2023-10-09 20:03:22 UTC
Created attachment 162179 [details]
Syslog during the Wayland startup crash
Comment 2 Zamundaaa 2023-10-09 20:49:51 UTC
Please get a backtrace for kwin with
> coredumpctl debug kwin_wayland --debugger-arguments="-ex bt"
and attach it here
Comment 3 Lassi Väätämöinen 2023-10-10 18:13:36 UTC
Created attachment 162195 [details]
Backtrace from coredumpctl

Taken dump with the follwing command
> sudo coredumpctl debug kwin_wayland --debugger-arguments="-ex bt" |tee kwin_wayland_crash_plasma6.txt
Comment 4 Bug Janitor Service 2023-10-10 19:57:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4490
Comment 5 zvova7890 2023-10-11 00:28:27 UTC
I have the same behavior. It's interesting fact, that is on Intel UHD laptop it works fine, but with desktop powered AMD gpu is not.
Comment 6 Zamundaaa 2023-10-11 10:56:23 UTC
Git commit aaffd459cede4a3f3a4119be9d7038b9beec1793 by Xaver Hugl.
Committed on 11/10/2023 at 12:42.
Pushed by zamundaaa into branch 'master'.

backends/drm: add more nullptr checks for m_surface

M  +11   -3    src/backends/drm/drm_egl_layer_surface.cpp

https://invent.kde.org/plasma/kwin/-/commit/aaffd459cede4a3f3a4119be9d7038b9beec1793