backends/drm: add more nullptr checks for m_surface

BUG: 475380